@@ -41,12 +41,6 @@ A list of all bugs open for the next development release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  *) SSL-crashed every now and then with 3.2.0 + SNI-fixes
-  Trunk: d6d07d8c43c084d5683b45c1efe9ed2bf9ef8635
-  3.2.x Patch: https://issues.apache.org/jira/secure/attachment/12546611/TS-1484-3.2.x.patch
-  Jira: https://issues.apache.org/jira/browse/TS-1484
-  +1: jpeach, igalic, zwoop
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
